--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="instruction">Потряси меня \n и заполни \n прогресс-бар</string>
     <string name="imgAbout"> Shaker Image </string>
 
+    <!-- For Main. Created by Yamushev Igor on 16.11.14 -->
+    <string name="Alarms"> Будильники: </string>
+    <string name="addNewAlarm">  Добавить новый </string>
+
 </resources>
