Some addiitions 1) ShakeActivity - загрузка картинки теперь не из кода 2) MainActivity - много чего 3) strings and en-strings 4) AndroidManifest - описаны settings and shake

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">WakeUpper</string>
+    <string name="settingsManifestLabel">Settings</string>
+    <string name="shakeManifestLabel">Shake</string>
+
     <string name="hello_world">Azaza</string>
     <string name="action_settings">Settings</string>
     <string name="stringOK">OK</string>
