--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <!-- For Shake. Created by Yamushev Igor on 15.11.14 -->
     <string name="instruction">Потряси меня \n и заполни \n прогресс-бар</string>
     <string name="imgAbout">Shaker Image</string>
-    <string name="kurosava">Красава!</string>
+    <string name="kurosawa">Красава!</string>
 
     <!-- For Choose. Created by kanphis on 02.12.14 -->
     <string name="choose_description">Выберите числа кратные </string>
