Toast 1) send context from settings to dataProvider 2) dbHelper "_intID " лишний пробел 3) новая строчка для ошибки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     <string name="title_activity_choose">Choose</string>
     <string name="title_activity_unblock">Unblock</string>
 
+    <!-- For DataProvider. Created by Yamushev Igor on 04.12.14 -->
+    <string name="noSuchIDError">К сожалению произошла ошибка такого
+                 будильника нет в базе. Пожалуйста, создайте новый</string>
 </resources>
