days hours minutes seconds until alarm & VERYBIGTEXT on ChooseActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,12 @@
     <string name="title_activity_arithmetic">ArithmeticActivity</string>
     <string name="hello_world">Azaza</string>
     <string name="action_settings">Settings</string>
+    <string name="untilAlarm">Будильник сработает через</string>
+    <string name="days">д</string>
+    <string name="hours">ч</string>
+    <string name="minutes">мин</string>
+    <string name="seconds">с</string>
+
 
     <!-- For Activities. Created by kanphis on 02.12.14 -->
     <string name="checkAnswer">Проверить</string>
